tests/neg/runtimeNames.jo
import jo.runtime.JS    // error

def main = JS.print "hello\n"  // error // error
